tests/invalid/simple/ListDefine_CompileFail_1.whiley
define intset as [int]

void System::main([string] args):
     is = {1,2,3,4}
     print str(|il|)
     print str(is ∪ {5})
